...
            android:typeface="serif"
            android:maxLines="1"
            android:maxLength="12"
            android:inputType="text"
            android:textAlignment="center"
            android:layout_alignTop="@+id/textViewName"
            android:id="@+id/textEditScheduleName"/>

        <TextView
            android:id="@+id/textViewAddProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
...
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="12dp"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:text="Save Changes"
                    android:id="@+id/buttonAddSchedule"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:text="Discard Changes"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/buttonDiscardSchedule"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/buttonAddSchedule" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_height="40dp"
                android:background="#FF0000"
                android:textColor="@color/white"
                android:text="Delete Schedule"
                android:id="@+id/buttonDeleteChanges2"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>


...
