...
            android:textStyle="italic"
            android:backgroundTint="@color/blue"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:textAlignment="center"
            android:layout_alignTop="@+id/textViewName"
            android:id="@+id/textEditScheduleName3"/>

        <TextView
            android:id="@+id/textViewAddProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
...
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="12dp"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:text="Create Schedule"
                    android:id="@+id/buttonAddSchedule3"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#FF0000"
                    android:textColor="@color/white"
...
