...
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/background"
        android:textColor="@color/blue"
        android:textSize="24dp"
        android:typeface="serif"
        android:id="@+id/textViewScheduleName"/>

    <ToggleButton
        android:id="@+id/toggleScheduleStatus"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:background="@color/blue"
...
